Styling complete. Spacing issues fixed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,4 @@
 form {
-    background-color: #fff;
-    margin: auto;
     border: 12px solid #e2eef4;
     font-family: 'Roboto', sans-serif;
 }
@@ -9,7 +7,9 @@ p{
     text-transform: uppercase;
     font-size: 0.75em;
     color: #939393;
+    font-weight: bold;
 }
+
 .row{
     width: 100%;
     display: inline-block;
@@ -46,18 +46,23 @@ p{
 .fourth-row {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    width: 100%;
-    display: inline-block;
+    text-align: center;
 }
 
 .button {
-     text-align: center;
      border-radius: 5px;
-     width: 25%;
-     margin: 0 auto;
+     width: 22%;
      background-color: #91be63;
-     font-size: .75em;
      color: #fff;
+     padding-top: 12px;
+     margin: 12px 0;
 }
 
-
+input {
+    border-width:0px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 72% !important;
+    color: #cbcbcb;
+    padding-bottom: 12px;
+    width: 90%;
+}
